--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,3 +1,11 @@
 .list-group-item {
   line-height: 2.5;
 }
+
+
+.container {
+  width: 70%;
+  height: 500px;
+  background-color: blue;
+  margin-top: 30px;
+}
