--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,5 +11,6 @@
 <body>
   {{{body}}}
 </body>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 </html>
