added jquery for chef and staff button clicks.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-  <button type="button" class="btn btn-primary">Chef</button>
-  <button type="button" class="btn btn-secondary">Staff</button>
+  <button type="button" id="chef" class="btn btn-primary">Chef</button>
+  <button type="button" id="staff" class="btn btn-secondary">Staff</button>
 
 </div>
