--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,13 +4,17 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title" charset="utf-8">
-    <title>Home Page</title>
+    <link rel="stylesheet" href="/assets/css/styles.css" media="screen" title="no title" charset="utf-8">
+    <title>POS APP</title>
 </head>
 
 <body>
-    {{{body}}}
+    <div class="container">
+        {{{body}}}
+    </div>
 </body>
+
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/assets/js/inventoryForm.js"></script>
 
 </html>
