added each in the inventory.handlebars in order to loop the row

--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -8,11 +8,13 @@
     </tr>
   </thead>
   <tbody>
+    {{#each item}}
     <tr>
       <th scope="row">{{inventory.id}}</th>
       <td>{{inventory.productName}}</td>
       <td>{{inventory.currentQuanity}}</td>
       <td>{{inventory.weeklyQuanity}}</td>
     </tr>
+    {{/each}}
   </tbody>
 </table>
