--- a/views/inventoryForm.handlebars
+++ b/views/inventoryForm.handlebars
@@ -1,4 +1,4 @@
-<form method="POST">
+<form action="POST">
     <div class="form-group">
         <label for="product-name">Product Name</label>
         <input type="text" class="form-control" id="product-name" placeholder="Steak">
