--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,4 @@
-<div class="container">
-  <button type="button" class="btn btn-primary">Chef</button>
-  <button type="button" class="btn btn-secondary">Staff</button>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-</div>
+  <a href="/inventory" type="button" class="btn btn-primary">Chef</a>
+  <a href="#" type="button" class="btn btn-primary">Staff</a>
+
