Added links to index page, also added a navbar for easier navigation

--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -1,5 +1,6 @@
 <div class="row">
-    <i class="material-icons">add</i>
+    {{!-- <i id="add-item" class="material-icons">add</i> --}}
+    <button id="add-item" class="btn btn-primary">Add Item</button>
 </div>
 
 <table class="table table-hover">
@@ -7,8 +8,8 @@
         <tr>
             <th scope="col">ID</th>
             <th scope="col">Product Name</th>
-            <th scope="col">Current Quanity</th>
-            <th scope="col">Quanity Needed For The Week</th>
+            <th scope="col">Current Quantity</th>
+            <th scope="col">Quantity Needed For The Week</th>
         </tr>
     </thead>
     <tbody>
@@ -16,9 +17,49 @@
         <tr>
             <th scope="row">{{id}}</th>
             <td>{{productName}}</td>
-            <td>{{currentQuanity}}</td>
-            <td>{{weeklyQuanity}}</td>
+            <td>{{currentQuantity}}</td>
+            <td>{{weeklyQuantity}}</td>
+            <td>
+                <button id="delete-item" class="btn btn-danger">X</button>
+            </td>
         </tr>
-        {{/each }}
+        {{/each}}
     </tbody>
 </table>
+
+<div id="add-item-modal" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="delete-item-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                ...
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <a class="btn btn-danger btn-ok">Delete</a>
+            </div>
+        </div>
+    </div>
+</div>
