--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -20,7 +20,7 @@
             <td>{{currentQuantity}}</td>
             <td>{{weeklyQuantity}}</td>
             <td>
-                <button id="delete-item" class="btn btn-danger">X</button>
+                <button class="delete-item btn btn-danger" data-id="{{id}}">X</button>
             </td>
         </tr>
         {{/each}}
