Some minor html refactoring. Added dynamic scripts for each route.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,10 +2,10 @@
     line-height: 2.5;
 }
 
-#add-item-modal {
+/* #add-item-modal {
     visibility: hidden;
 }
 
 #delete-item-modal {
     visibility: hidden;
-}
+} */
