--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,10 +2,6 @@
     line-height: 2.5;
 }
 
-/* #add-item-modal {
-    visibility: hidden;
+.edit-button {
+    font-size: 20px;
 }
-
-#delete-item-modal {
-    visibility: hidden;
-} */
