--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,3 +9,10 @@
 #delete-item-modal {
     visibility: hidden;
 }
+
+.container {
+    width: 700px;
+    height: 800px;
+    margin-top: 100px;
+    align-content: center;
+}
