--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -21,9 +21,9 @@
             <td>{{productName}}</td>
             <td>{{currentQuantity}}</td>
             <td>{{weeklyQuantity}}</td>
-            <td class="edit-button btn material-icons">edit</td>
+            <td class="edit-button btn material-icons" data-id="{{id}}" data-toggle="modal" data-target="#edit-item-modal">edit</td>
             <td>
-                <button class="delete-item btn btn-danger" data-id={{id}} data-toggle="modal" data-target="#delete-item-modal">X</button>
+                <button class="delete-item btn btn-danger" data-id="{{id}}" data-toggle="modal" data-target="#delete-item-modal">X</button>
             </td>
         </tr>
         {{/each}}
@@ -70,6 +70,36 @@
             <div class="modal-footer">
                 <button type="button" id="delete-item" class="btn btn-danger" data-dismiss="modal">Yes</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="edit-item-modal" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Edit an Item</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="product-name">Product Name</label>
+                        <input type="text" class="form-control" id="product-name-update">
+                    </div>
+                    <div class="form-group">
+                        <label for="current-quantity">Current Quantity</label>
+                        <input type="text" class="form-control" id="current-quantity-update">
+                    </div>
+                    <div class="form-group">
+                        <label for="weekly-quantity">Weekly Quantity</label>
+                        <input type="text" class="form-control" id="weekly-quantity-update">
+                    </div>
+                    <submit class="btn btn-primary" id="item-update" data-dismiss="modal">Update Item</submit>
+                </form>
             </div>
         </div>
     </div>
