added ticket page and code for buttons

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,2 +1,2 @@
 <a type="button" class="btn btn-primary" href="/inventory">Chef</a>
-<a type="button" class="btn btn-primary" href="/">Staff</a>
+<a type="button" class="btn btn-primary" href="/ticket">Staff</a>
