--- a/views/ticket.handlebars
+++ b/views/ticket.handlebars
@@ -1,11 +1,16 @@
 <div class="row">
     {{!-- buttons --}}
     <div class="col-md-8">
-        <button>{{availFood}}</button>
+        {{#each inventory}}
+        <button>{{productName}}</button>
+
+        {{/each}}
 
     </div>
     {{!-- order table  --}}
     <div class="col-md-4">
+        <h2>Table Order:</h2>
+        <hr>
         <ul>
             <li>
                 {{order}}
