--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -21,13 +21,11 @@
             <td>{{productName}}</td>
             <td>{{currentQuantity}}</td>
             <td>{{weeklyQuantity}}</td>
-            <td class="edit-button btn material-icons" data-id={{id}} data-toggle="modal" data-target="#edit-item-modal">edit</td>
+            <td class="edit-button btn material-icons" data-id={{id}} data-toggle="modal"
+                data-target="#edit-item-modal">edit</td>
             <td>
                 <button class="delete-item btn btn-danger" data-id={{id}} data-toggle="modal"
                     data-target="#delete-item-modal">X</button>
-            <td class="edit-button btn material-icons" data-id="{{id}}" data-toggle="modal" data-target="#edit-item-modal">edit</td>
-            <td>
-                <button class="delete-item btn btn-danger" data-id="{{id}}" data-toggle="modal" data-target="#delete-item-modal">X</button>
             </td>
         </tr>
         {{/each}}
@@ -92,20 +90,6 @@
                 <form>
                     <div class="form-group">
                         <label for="product-name">Product Name</label>
-                        <input type="text" class="form-control" id="product-name" placeholder="Steak">
-                    </div>
-                    <div class="form-group">
-                        <label for="current-quantity">Current Quantity</label>
-                        <input type="text" class="form-control" id="current-quantity" placeholder="3">
-                    </div>
-                    <div class="form-group">
-                        <label for="weekly-quantity">Weekly Quantity</label>
-                        <input type="text" class="form-control" id="weekly-quantity" placeholder="6">
-                    </div>
-                    <submit class="btn btn-primary" id="item-submit" data-dismiss="modal">Add Item</submit>
-                <form>
-                    <div class="form-group">
-                        <label for="product-name">Product Name</label>
                         <input type="text" class="form-control" id="product-name-update">
                     </div>
                     <div class="form-group">
@@ -122,4 +106,3 @@
         </div>
     </div>
 </div>
-
