--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,13 +9,19 @@
 #delete-item-modal {
     visibility: hidden;
 } */
-
+body {
+    background-color: black;
+}
 .container {
     width: 700px;
-    height: 800px;
+    height: auto;
     margin-top: 100px;
     align-content: center;
+    background-color: white;
+    border-radius: 10px;
 }
+
+#button
 
 .edit-button {
     font-size: 20px;
