--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,2 +1,2 @@
-<a type="button" class="btn btn-primary" href="/inventory">Chef</a>
-<a type="button" class="btn btn-primary" href="/ticket">Staff</a>
+<a role="button" id="" class="btn btn-primary btn-lg" href="/inventory">Chef</a>
+<a role="button" class="btn btn-primary btn-lg" href="/ticket">Staff</a>
