--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,12 +10,11 @@
     visibility: hidden;
 } */
 body {
-    background-color: black;
+    /* background-color: black; */
 }
 .container {
-    width: 700px;
     height: auto;
-    margin-top: 100px;
+    margin-top: 30px;
     align-content: center;
     background-color: white;
     border-radius: 10px;
