--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -70,7 +70,7 @@
                 Are you sure you want to delete this item?
             </div>
             <div class="modal-footer">
-                <button type="button" id="delete-item" class="btn btn-danger" data-dismiss="modal">Yes</button>
+                <button type="button" id="delete-item-confirm" class="btn btn-danger" data-dismiss="modal">Yes</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
             </div>
         </div>
