--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,3 +15,24 @@
 .edit-button {
     font-size: 20px;
 }
+.scrollbar {
+    margin-left: 30px;
+    float: right;
+    height: 300px;
+    width: 500px;
+    background: #fff;
+    overflow-y: scroll;
+    margin-bottom: 25px;
+    }
+    .force-overflow {
+    min-height: 450px;
+    }
+    
+    .scrollbar-primary::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5; }
+    
+    .scrollbar-primary::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+    background-color: #4285F4; }
