--- a/views/ticket.handlebars
+++ b/views/ticket.handlebars
@@ -8,22 +8,26 @@
     </div>
 
     <div class="col-md-6">
-        <table class="table table-striped" id="ticket-table">
-            <thead id="ticket-table-head">
-                <tr>
-                    <th scope="col"></th>
-                    <th scope="col">Quantity</th>
-                    <th scope="col">Product</th>
-                    <th scope="col">Price</th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
+        <div class="scrollbar scrollbar-primary">
+            <div class="force-overflow">
+                <table class="table table-striped" id="ticket-table">
+                    <thead id="ticket-table-head">
+                        <tr>
+                            <th scope="col"></th>
+                            <th scope="col">Quantity</th>
+                            <th scope="col">Product</th>
+                            <th scope="col">Price</th>
+                            <th scope="col"></th>
+                            <th scope="col"></th>
 
-                </tr>
-            </thead>
+                        </tr>
+                    </thead>
 
-            <tbody id="ticket-table-body">
-            </tbody>
-        </table>
+                    <tbody id="ticket-table-body">
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
     <div class="modal fade" id="delete-item-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
         aria-hidden="true">
@@ -33,7 +37,8 @@
                     Are you sure you want to delete this item?
                 </div>
                 <div class="modal-footer">
-                    <button type="button" id="delete-item-confirm" class="btn btn-danger" data-dismiss="modal">Yes</button>
+                    <button type="button" id="delete-item-confirm" class="btn btn-danger"
+                        data-dismiss="modal">Yes</button>
                     <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
                 </div>
             </div>
