Minor front end changes to ticket

--- a/views/ticket.handlebars
+++ b/views/ticket.handlebars
@@ -12,7 +12,7 @@
             <thead id="ticket-table-head">
                 <tr>
                     <th scope="col"></th>
-                    <th scope="col">Quantity</th>
+                    <th scope="col">Qty</th>
                     <th scope="col">Product</th>
                     <th scope="col">Price</th>
                     <th scope="col"></th>
@@ -26,4 +26,12 @@
         </table>
     </div>
 
+
 </div>
+<footer>
+    {{!-- <div class="container"> --}}
+        <div class="row text-right">
+            <h4 class="col"><span id="total-price">0.00</span></h4>
+        </div>
+    {{!-- </div> --}}
+</footer>
