--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,16 +2,6 @@
     line-height: 2.5;
 }
 
-/* #add-item-modal {
-    visibility: hidden;
-}
-
-#delete-item-modal {
-    visibility: hidden;
-} */
-body {
-    /* background-color: black; */
-}
 .container {
     height: auto;
     margin-top: 30px;
@@ -20,8 +10,13 @@ body {
     border-radius: 10px;
 }
 
-#button
 
 .edit-button {
     font-size: 20px;
+}
+
+footer {
+    width: 100%;
+    position: fixed;
+    bottom: 0;
 }
