added url for icons, created css for inventory and staff page

--- a/views/ticket.handlebars
+++ b/views/ticket.handlebars
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-6">
         {{#each inventory}}
-        <button class="ticket-item" data-id="{{id}}">{{productName}}</button>
+        <button class="ticket-item" data-id="{{id}}"><img class = "food-icon-ticket" src="{{imageURL}}"><hr>{{productName}}</button>
 
         {{/each}}
 
