--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,7 +11,15 @@
     border-radius: 10px;
 }
 
+.food-icon-inventory {
+    height: 20px;
+    width: 20px;
+}
 
+.food-icon-ticket {
+    height: 100px;
+    width: 100px;
+}
 .edit-button {
     font-size: 20px;
 }
