--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -10,6 +10,7 @@
             <th scope="col">Product Name</th>
             <th scope="col">Current Quantity</th>
             <th scope="col">Quantity Needed For The Week</th>
+            <th scope="col">Image</th>
             <th scope="col">Edit</th>
             <th scope="col">Delete</th>
         </tr>
@@ -21,6 +22,7 @@
             <td>{{productName}}</td>
             <td>{{currentQuantity}}</td>
             <td>{{weeklyQuantity}}</td>
+            <td><img class = "food-icon-inventory" src="{{imageURL}}"></td>
             <td class="edit-button btn material-icons" data-id={{id}} data-toggle="modal"
                 data-target="#edit-item-modal">edit</td>
             <td>
@@ -54,6 +56,10 @@
                     <div class="form-group">
                         <label for="weekly-quantity">Weekly Quantity</label>
                         <input type="text" class="form-control" id="weekly-quantity" placeholder="6">
+                    </div>
+                    <div class="form-group">
+                        <label for="product-name">Product URL</label>
+                        <input type="text" class="form-control" id="image-URL" placeholder="http://www.google.com">
                     </div>
                     <submit class="btn btn-primary" id="item-submit" data-dismiss="modal">Add Item</submit>
                 </form>
@@ -99,6 +105,10 @@
                     <div class="form-group">
                         <label for="weekly-quantity">Weekly Quantity</label>
                         <input type="text" class="form-control" id="weekly-quantity-update">
+                    </div>
+                    <div class="form-group">
+                        <label for="product-name">Product URL</label>
+                        <input type="text" class="form-control" id="image-URL-update">
                     </div>
                     <submit class="btn btn-primary" id="item-update" data-dismiss="modal">Update Item</submit>
                 </form>
