--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,7 +2,6 @@
     line-height: 2.5;
 }
 
-
 .container {
     height: auto;
     margin-top: 30px;
@@ -20,9 +19,19 @@
     height: 100px;
     width: 100px;
 }
+
 .edit-button {
     font-size: 20px;
 }
+
+.ticket-row td {
+    padding: 5px;
+}
+
+.fixed-column {
+    width: 50px;
+}
+
 .scrollbar {
     margin-left: 30px;
     float: right;
@@ -31,16 +40,19 @@
     background: #fff;
     overflow-y: scroll;
     margin-bottom: 25px;
-    }
-    .force-overflow {
+}
+
+.force-overflow {
     min-height: 450px;
-    }
-    
-    .scrollbar-primary::-webkit-scrollbar {
+}
+
+.scrollbar-primary::-webkit-scrollbar {
     width: 12px;
-    background-color: #F5F5F5; }
-    
-    .scrollbar-primary::-webkit-scrollbar-thumb {
+    background-color: #F5F5F5;
+}
+
+.scrollbar-primary::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: #4285F4; }
+    background-color: #4285F4;
+}
