--- a/views/ticket.handlebars
+++ b/views/ticket.handlebars
@@ -17,6 +17,7 @@
                             <th scope="col" class="fixed-column">Qty</th>
                             <th scope="col">Product</th>
                             <th scope="col">Price</th>
+                            <th scope="col">Net Price</th>
                             <th scope="col" class="fixed-column"></th>
                             <th scope="col" class="fixed-column"></th>
                         </tr>
