Started work on a total price counter

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,2 +1,7 @@
-<a role="button" id="" class="btn btn-primary btn-lg" href="/inventory">Chef</a>
+<a role="button" id="" class="btn btn-primary btn-lg" href="/inventory">Chef
+    <img href="img/chef.jpg">
+</a>
 <a role="button" class="btn btn-primary btn-lg" href="/ticket">Staff</a>
+<div>
+    <img href="img/chef.jpg">
+</div>
