--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -45,7 +45,7 @@
 .scrollbar {
     margin-left: 30px;
     float: right;
-    height: 300px;
+    height: 600px;
     width: 500px;
     background: #fff;
     overflow-y: scroll;
@@ -65,4 +65,12 @@
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
     background-color: #4285F4;
+}
+
+#total {
+    margin-right: 20px;
+}
+
+#order-button {
+    margin-right: 20px;
 }
