--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,12 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/inventory">Inventory</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/ticket">Staff</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/orderHistory">Past Orders</a>
+                </li>
             </ul>
         </div>
     </nav>
