--- a/views/ticket.handlebars
+++ b/views/ticket.handlebars
@@ -28,10 +28,10 @@
                 </table>
             </div>
         </div>
-                <div class="text-right" id="total">
-                    <h4>Total: <span id="total-price">$00.00</span></h4>
-                </div>
-                <div class = "btn btn-primary float-right" id="order-button">Submit Order</div>
+        <div class="text-right" id="total">
+            <h4>Total: <span id="total-price">$0.00</span></h4>
+        </div>
+        <div class="btn btn-primary float-right" id="order-submit">Submit Order</div>
     </div>
 
 </div>
