--- a/views/ticket.handlebars
+++ b/views/ticket.handlebars
@@ -62,11 +62,10 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                Are you sure you want to confirm the order?
+                Your ticket is empty. Please add items before submitting the order.
             </div>
             <div class="modal-footer">
-                <button type="button" id="delete-item-confirm" class="btn btn-danger" data-dismiss="modal">Yes</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Okay</button>
             </div>
         </div>
     </div>
