Submit order now updates the inventory if there is a sufficient quantity to meet the order

--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -28,7 +28,7 @@
             <td>${{price}}</td>
             <td><img class="food-icon-inventory" src="{{imageURL}}"></td>
             <td>
-                <button class="edit-item btn material-icons" data-toggle="modal" data-target="#edit-item-modal">edit</button>
+                <button class="edit-item btn btn-dark material-icons" data-toggle="modal" data-target="#edit-item-modal">edit</button>
             </td>
             <td>
                 <button class="delete-item btn btn-danger" data-toggle="modal"
