--- a/views/ticket.handlebars
+++ b/views/ticket.handlebars
@@ -73,7 +73,6 @@
     </div>
 </div>
 
-
 <div class="modal fade" id="confirm-submit-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
     aria-hidden="true">
     <div class="modal-dialog">
@@ -83,6 +82,20 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Okay</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="order-submit-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                Your Order Has Been Submitted!
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" id="order-submit-confirm" data-dismiss="modal">Okay</button>
             </div>
         </div>
     </div>
