Added an insufficient quantity modal on the submit order

--- a/views/ticket.handlebars
+++ b/views/ticket.handlebars
@@ -100,3 +100,17 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="insufficient-qty-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-body">
+                You have an insufficient quantity in the inventory to meet the order.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Okay</button>
+            </div>
+        </div>
+    </div>
+</div>
