--- a/views/inventory.handlebars
+++ b/views/inventory.handlebars
@@ -3,7 +3,7 @@
 </div>
 
 <div class="row" id="nav-container">
-    <a type="button" class="btn btn-primary" href="/">Back</a>
+    <a role="button" class="btn btn-primary" href="/">Back</a>
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#add-item-modal">Add Item</button>
 </div>
 
