Adjust back button role

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,6 @@
+<div class="title-container">
+    <h1>POS</h1>
+</div>
 <div id="index-container">
     <a role="button" id="management-button" class="btn" href="/inventory">
         <span>
